# SignDETR-VSL

./: .gitattributes  .gitignore  README.md  pyproject.toml  steps.md  steps_for_label_data.md  steps_for_train.md  training_loop_example.py
archive/goodcheckpoints/: 1000_model.pt
data/test/labels/: 1490d852-thankyou-4b295f22-725a-11f0-bdf3-b791a62111e4.txt  21b15c9a-iloveyou-37a68614-725a-11f0-bdf3-b791a62111e4.txt  6050ec8b-thankyou-4d0ce00c-725a-11f0-bdf3-b791a62111e4.txt  6f60f1f3-iloveyou-3fd627f4-725a-11f0-bdf3-b791a62111e4.txt  71f2fdd3-thankyou-4c6bfb92-725a-11f0-bdf3-b791a62111e4.txt  82b46951-hello-333e1de4-725a-11f0-bdf3-b791a62111e4.txt  8644ab8b-hello-35227fec-725a-11f0-bdf3-b791a62111e4.txt  aabe1c47-thankyou-4a879836-725a-11f0-bdf3-b791a62111e4.txt  ae62192a-hello-34810edc-725a-11f0-bdf3-b791a62111e4.txt  b0dded85-hello-3664aed4-725a-11f0-bdf3-b791a62111e4.txt  ca158000-iloveyou-47632260-725a-11f0-bdf3-b791a62111e4.txt  df0f6242-hello-301908a4-725a-11f0-bdf3-b791a62111e4.txt  f041a17d-iloveyou-398a055a-725a-11f0-bdf3-b791a62111e4.txt  f2b4d210-hello-2890da58-725a-11f0-bdf3-b791a62111e4.txt  faf8fade-thankyou-4bca5e68-725a-11f0-bdf3-b791a62111e4.txt
data/train/labels/: 03dd2586-hello-31fc7bec-725a-11f0-bdf3-b791a62111e4.txt  0457836a-iloveyou-42590348-725a-11f0-bdf3-b791a62111e4.txt  (+98 more)
pretrained/: 4426_model.pt
src/: config.json  data.py  loss.py  model.py  realtime.py  test.py  train.py  val.py
src/utils/: boxes.py  collect_images.py  linearsumeg.py  logger.py  rich_handlers.py  setup.py  testprogress.py
